Filter added, some UI changes, cleanup

--- a/devCircle/src/main/resources/application.properties
+++ b/devCircle/src/main/resources/application.properties
@@ -5,10 +5,10 @@ spring.application.name=devCircle
 spring.datasource.url=jdbc:postgresql://localhost:5432/devcircle
 spring.datasource.username=postgres
 spring.datasource.password=postgres
-
 # ===============================
 # = JPA / Hibernate
 # ===============================
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.data.web.pageable.default-page-size=8
